--- a/Client/style.css
+++ b/Client/style.css
@@ -5,3 +5,11 @@ body, html{
     background-attachment: fixed;
     background-position: center;
 }
+.containter{
+    opacity: 80;
+    background-color: black;
+    margin: 0 auto;
+    background-color: #777;
+    font-size: 24px;
+    padding: 25px;
+}
