--- a/Client/style.css
+++ b/Client/style.css
@@ -1,15 +1,65 @@
-body, html{
+table {
+    table-layout: auto;
+    border-collapse: collapse;
+    width: 50%;
+    border:solid 3px rgb(47, 73, 73)
+  }
+
+  th, td {
+    width: auto;
+    border: 1px solid rgb(7, 7, 7);
+    text-align: center;
+    padding: 3px;
+  }
+  
+  tr:nth-child(even){background-color: #5c5858}
+  
+  th {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  button{
+    background-color: grey;
+    color: white;
+  }
+
+  input {
+    text-align: center;
+    width: 98%;
+    opacity: 0.75;
+    font-weight: bold;
+    background-color: unset;
+    color: ghostwhite;
+  }
+
+  form{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .form{
+    width: 10%;
+    border: 2px;
+    border-color: whitesmoke;
+  }
+
+  h4{
+    color: ghostwhite;
+    text-decoration: underline;
+  }
+
+  h1{
+    text-decoration: underline;
+    color: whitesmoke;
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  body{
     background: url('Arnold.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-}
-.containter{
-    opacity: 80;
-    background-color: black;
-    margin: 0 auto;
-    background-color: #777;
-    font-size: 24px;
-    padding: 25px;
-}
+  }
