--- a/Client/style.css
+++ b/Client/style.css
@@ -12,6 +12,9 @@ table {
     padding: 3px;
   }
   
+  tr{
+    background-color: rgb(77, 9, 77);
+  }
   tr:nth-child(even){background-color: #5c5858}
   
   th {
@@ -45,7 +48,7 @@ table {
   }
 
   h4{
-    color: ghostwhite;
+    color: goldenrod;
     text-decoration: underline;
   }
 
@@ -57,7 +60,7 @@ table {
   }
 
   body{
-    background: url('Arnold.png');
+    background: url('clpvc.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
